# my-rust-1

cache_test/: Cargo.toml  processes.json
cache_test/src/: cache.rs  main.rs
call-api/: Cargo.toml
call-api/src/: main.rs
consumer-control-api/: .dockerignore  Cargo.toml  Dockerfile  docker_run.bat  local_run.bat  processes.json
consumer-control-api/docs/: openapi.html  openapi.yml
consumer-control-api/src/: cache.rs  main.rs  s3_util.rs
dmi-util/: Cargo.toml  copy_exe.bat
dmi-util/queryable_templates/: dbdest.json  dbdesttable.json  secrets_map.json
dmi-util/src/: db_util_dbdest.rs  db_util_dbdesttable.rs  db_util_secretsmap.rs  main.rs
hello/src/: main.rs
mandelbrot/src/: main.rs
quickreplace/src/: main.rs
s3_stuff/: Cargo.toml
s3_stuff/src/: main.rs  sdk_util.rs  stream_util.rs
