[package]
name = "call-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
rand = "0.8.3"
clap = { version = "4.5.2", features = ["derive"] }
