[package]
name = "consumer-control-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.9"
anyhow = "1.0"
actix-web = "4.0"
actix-files = "0.6.0" # Ensure this line is added, and check for the latest version
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.1", features = ["derive"] }
tokio = { version = "1", features = ["full", "io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-core = "0.3.30"
futures = "0.3.30"
bytes = "1.5.0"
aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
# snippet-start:[s3.rust.s3-object-lambda-cargo.toml]
# snippet-end:[s3.rust.s3-object-lambda-cargo.toml]
aws-sdk-s3 = { version = "1.4.0", features = ["rt-tokio"] }
aws-smithy-runtime = { version = "1.0.1" }
aws-smithy-runtime-api = { version = "1.0.1", features = ["client"] }
aws-smithy-types = { version = "1.0.1", features = ["http-body-0-4-x"] }
thiserror = "1.0"
lazy_static = "1.4"
log = "0.4.21"
env_logger = "0.11.3"
chrono = "0.4"
serde_qs = "0.12.0"

