[package]
name = "dmi-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1.19.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4", "with-serde_json-1"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
postgres-types = "0.2"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

