[package]
name = "s3_stuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
tokio = { version = "1", features = ["full", "io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-core = "0.3.30"
futures = "0.3.30"
bytes = "1.5.0"
aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
# snippet-start:[s3.rust.s3-object-lambda-cargo.toml]
# snippet-end:[s3.rust.s3-object-lambda-cargo.toml]
aws-sdk-s3 = { version = "1.4.0", features = ["rt-tokio"] }
aws-smithy-runtime = { version = "1.0.1" }
aws-smithy-runtime-api = { version = "1.0.1", features = ["client"] }
aws-smithy-types = { version = "1.0.1", features = ["http-body-0-4-x"] }
thiserror = "1.0"
lazy_static = "1.4"
once_cell = "1.9"